[metadata]
name = psptool
version = 2.0
author = Christian Werling
author_email = cwerling@posteo.de
description = psptool is a Swiss Army knife for dealing with AMD binary blobs for the Platform Security Processor (PSP) inside BIOS ROM files.

[options]
packages = psptool
install_requires = cryptography; prettytable
scripts = bin/psptrace

[options.entry_points]
console_scripts = psptool = psptool.__main__:main
