[metadata]
name = psptool
version = 2.1
author = Christian Werling
author_email = cwerling@posteo.de
url = https://github.com/PSPReverse/psptool
description = PSPTool is a tool for dealing with AMD binary blobs

classifiers= Development Status :: 4 - Beta
             Intended Audience :: Science/Research
             Topic :: Security
             License :: OSI Approved :: GNU General Public License v3 (GPLv3)
             Programming Language :: Python :: 3.6

[options]
scripts = bin/psptrace
packages = psptool
install_requires = cryptography
                   prettytable

[options.entry_points]
console_scripts = psptool = psptool.__main__:main
