[metadata]
name = psptool
version = 2.7
author = Christian Werling
author_email = cwerling@posteo.de
url = https://github.com/PSPReverse/PSPTool
description = PSPTool is a tool for dealing with AMD binary blobs

classifiers= Development Status :: 4 - Beta
             Intended Audience :: Science/Research
             Topic :: Security
             License :: OSI Approved :: GNU General Public License v3 (GPLv3)
             Programming Language :: Python :: 3.8

[options]
packages = psptool
python_requires = >=3.8
install_requires = cryptography>=38.0.0
                   prettytable

[options.entry_points]
console_scripts = psptool = psptool.__main__:main
